mudança de local das paginas

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
     <section id="about">
         <div class="container">
-            <img class="store-front" src="./loja.jpg" alt="Fachada da loja Games Shop"/>
+            <img class="store-front" src="./images/loja.jpg" alt="Fachada da loja Games Shop"/>
             <div>
                 <h2>Sobre a loja</h2>
                 <p>
@@ -39,9 +39,9 @@
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla recusandae, ex laudantium distinctio quam corrupti, eos odio ipsum laboriosam sequi odit perspiciatis voluptatem repellendus, cupiditate perferendis officia? Voluptatum, totam quod!
                 </p>
                 <ul class="brands-list">
-                    <li><img src="./nintendo.png" alt="Nintendo" /></li>
-                    <li><img src="./xbox.png" alt="xbox" /></li>
-                    <li><img src="./playstation.png" alt="playstation" /></li>
+                    <li><img src="./images/nintendo.png" alt="Nintendo" /></li>
+                    <li><img src="./images/xbox.png" alt="xbox" /></li>
+                    <li><img src="./images/playstation.png" alt="playstation" /></li>
                 </ul>
             </div>
         </div>
@@ -65,17 +65,17 @@
                         <ul class="social-links">
                             <li>
                                 <a href="#" title="Siga-nos no Instagram">
-                                    <img src="./instagram.png" alt=" Logo do instagram"/>
+                                    <img src="./images/instagram.png" alt=" Logo do instagram"/>
                                 </a>
                             </li>
                             <li>
                                 <a href="#" title="Siga-nos no Instagram">
-                                    <img src="./facebook.png" alt=" Logo do facebook"/>
+                                    <img src="./images/facebook.png" alt=" Logo do facebook"/>
                                 </a>
                             </li>
                             <li>
                                 <a href="#" title="Siga-nos no Instagram">
-                                    <img src="./youtube.png" alt=" Logo do youtube"/>
+                                    <img src="./images/youtube.png" alt=" Logo do youtube"/>
                                 </a>
                             </li>
                         </ul>
